# elementary-writer

./: CMakeLists.txt  README.md  elementary-writing.avprj  meson.build
data/: CMakeLists.txt  elementary-writing.desktop
data/icons/: CMakeLists.txt
data/local/: CMakeLists.txt
doc/: CMakeLists.txt
po/: CMakeLists.txt  POTFILES.in
schemas/: org.schreiben.elementary-writing.gschema.xml
src/: CMakeLists.txt  Editor.vala  MainWindow.vala  Settings.vala  config.vala.cmake  elementary-writing.vala
